using URI class cause using URL(java.lang.String) is depracated since v20